--- a/client/src/components/index.less
+++ b/client/src/components/index.less
@@ -1,3 +1,21 @@
+.bor-eee {
+  border:1px solid #eee;
+}
 .select{
-    
+  .peopleList{
+    width: 32%;
+    min-width: 32%;
+    max-width: 32%;
+    border: 1px dashed #eee;
+    border-right: none;
+  }
+  .peopleList:nth-child(3),.peopleList:last-child{
+    border-right: 1px dashed #eee;
+  }
+}
+
+.wItems {
+  input{
+    border-radius: 5px;
+  }
 }
