--- a/client/src/app.less
+++ b/client/src/app.less
@@ -13,6 +13,12 @@
     align-items: center;
     justify-content: flex-start;
   }
+  &-justify-center {
+    justify-content: center;
+  }
+  &-align-content {
+    align-content: flex-start;
+  }
   &-inline {
     display: inline-flex;
   }
@@ -46,6 +52,16 @@
   &-jc-c {
     justify-content: center;
   }
+}
+
+.bor-ra {
+  border-radius: 6px;
+}
+.bor-eee {
+  border:2px solid #eee;
+}
+.over-auto {
+  overflow: auto
 }
 
 .clearfix {
